--- a/_posts/2019-09-01-自定义View.md
+++ b/_posts/2019-09-01-自定义View.md
@@ -143,6 +143,90 @@ public static int resolveSizeAndState(int size, int measureSpec, int childMeasur
 
 3. 重写onMeasure()和onLayout()来重新计算自定义ViewGroup的内部布局
 
+### onMeasure()
+    1. 调用每个子View的measure方法，让子View进行自我测量
+    2. 根据子View计算出的尺寸，得出子View的位置，并保存他们的位置和尺寸
+    3. 根据子View的位置和尺寸，得出自己的尺寸，并用setMeasureDimension()方法保存
+
+    ``` java
+    @Override
+    protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
+        int usedSize = 0;//子View已用过的空间
+        for (int i = 0; i < getChildCount(); i++) {
+            View childAt = getChildAt(i);
+            //获取子View的以layout打头的属性值
+            LayoutParams lp = childAt.getLayoutParams();
+            //lp.width 对应 layout_width 属性转化后的值
+            //lp.height 对应layout_height 属性转换后的值
+            //上面两个值 wrap_content => WRAP_CONTENG 常量
+            //          match_parent => MATCH_PARENT 常量
+            //          xxxdp / xxxsp => 对应的像素值
+
+
+            //下面根据开发者对子View的限制和可用空间来计算出对子View尺寸空间的限制
+            //分为三种情况
+            int widthSpec;
+            int canUseWidth = 0;//可用宽度
+            int mode = MeasureSpec.getMode(widthMeasureSpec);
+            int size = MeasureSpec.getSize(widthMeasureSpec);
+            switch (lp.width) {
+                //第三种情况
+                case WRAP_CONTENT:
+                    switch (mode){
+                        case EXACTLY | AT_MOST:
+                            canUseWidth = size;
+                            widthSpec = MeasureSpec.makeMeasureSpec(canUseWidth - usedSize, AT_MOST);
+                            break;
+                        case UNSPECIFIED:
+                            //原因：父View的可用空间没有上限
+                            widthSpec = MeasureSpec.makeMeasureSpec(0, UNSPECIFIED);
+                            break;
+                    }
+                    break;
+                //第二种情况也是把可用宽度传递进去，mode是EXACTLY，关键是可用宽度的计算
+                case MATCH_PARENT:
+                    switch (mode) {
+                        case EXACTLY | AT_MOST:
+                            canUseWidth = size;
+                            widthSpec = MeasureSpec.makeMeasureSpec(canUseWidth - usedSize, EXACTLY);
+                            break;
+                        case UNSPECIFIED:
+                            //表示父View对子View没有尺寸限制，子View的可用空间是无限大
+                            //此时开发者的要求是填满父控件，父控件的限制是无限大，所以只能给子View传递
+                            //mode是UNSPECIFIED，尺寸写0就行
+                            //原因：无上限的可用空间无法顶满
+                            widthSpec = MeasureSpec.makeMeasureSpec(0, UNSPECIFIED);
+                            break;
+                    }
+                    break;
+                //第一种情况，固定值，xxxsp或者xxxdp的，开发者的意见最重要，此时把具体的尺寸传递进去，
+                //mode是EXACTLY，使用makeMeasureSpec()方法压缩之后就行了
+                default:
+                     widthSpec = MeasureSpec.makeMeasureSpec(lp.width, EXACTLY);
+                    break;
+            }
+
+
+            //下面这俩参数包含了开发者对子View尺寸的限制和ViewGroup的可用空间
+            //开发者对子View的要求权限是绝对高于可用空间的
+            childAt.measure(widthMeasureSpec, heightMeasureSpec);
+        }
+    }
+    ```
+
+``` java 
+    @Override
+    protected void onLayout(boolean changed, int l, int t, int r, int b) {
+        for (int i = 0; i < getChildCount(); i++) {
+            View childAt = getChildAt(i);
+            //四个参数是在父View的左上右下四个坐标，需要把位置和尺寸转换一下，转换成左上右下
+            //childAt.layout(childLeft[l], childTop[t], childRight[r], childBottom[b]);
+        }
+    }
+```
+
+
+
 
 
 
