--- a/_posts/2019-09-01-自定义View.md
+++ b/_posts/2019-09-01-自定义View.md
@@ -58,7 +58,9 @@ tags:
 2. 调用onLayout方法，进行自我布局，子View如果是一个View，就会什么都不用做如果是ViewGroup还会调用layout()方法，把位置和尺寸数据传递过去，让子View进行自我布局，
 
 ### 三种情况
-1. 重写onMeasure来修改已有View的尺寸
+
++ 重写onMeasure来修改已有View的尺寸
+
 ``` java
 @Override
     protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
@@ -79,7 +81,7 @@ tags:
     } 
 ```
 
-2. 重写onMeasure来重新计算自定义View的尺寸
++ 重写onMeasure来重新计算自定义View的尺寸
 
 ``` java
     /**
@@ -141,14 +143,15 @@ public static int resolveSizeAndState(int size, int measureSpec, int childMeasur
     }
 ```
 
-3. 重写onMeasure()和onLayout()来重新计算自定义ViewGroup的内部布局
++ 重写onMeasure()和onLayout()来重新计算自定义ViewGroup的内部布局
 
 ### onMeasure()
-    1. 调用每个子View的measure方法，让子View进行自我测量
-    2. 根据子View计算出的尺寸，得出子View的位置，并保存他们的位置和尺寸
-    3. 根据子View的位置和尺寸，得出自己的尺寸，并用setMeasureDimension()方法保存
 
-    ``` java
+1. 调用每个子View的measure方法，让子View进行自我测量
+2. 根据子View计算出的尺寸，得出子View的位置，并保存他们的位置和尺寸
+3. 根据子View的位置和尺寸，得出自己的尺寸，并用setMeasureDimension()方法保存
+
+``` java
     @Override
     protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
         int usedSize = 0;//子View已用过的空间
@@ -212,7 +215,7 @@ public static int resolveSizeAndState(int size, int measureSpec, int childMeasur
             childAt.measure(widthMeasureSpec, heightMeasureSpec);
         }
     }
-    ```
+```
 
 ``` java 
     @Override
