--- a/_posts/2019-09-01-自定义View.md
+++ b/_posts/2019-09-01-自定义View.md
@@ -43,6 +43,8 @@ tags:
     }
 ``` 
 
+***
+
 # 布局
 主要包括：测量和布局。测量和布局阶段都是一个调用递归方法的过程。
 
@@ -59,7 +61,7 @@ tags:
 
 ### 三种情况
 
-+ 重写onMeasure来修改已有View的尺寸
+1. 重写onMeasure来修改已有View的尺寸
 
 ``` java
 @Override
@@ -81,7 +83,7 @@ tags:
     } 
 ```
 
-+ 重写onMeasure来重新计算自定义View的尺寸
+2. 重写onMeasure来重新计算自定义View的尺寸
 
 ``` java
     /**
@@ -143,7 +145,7 @@ public static int resolveSizeAndState(int size, int measureSpec, int childMeasur
     }
 ```
 
-+ 重写onMeasure()和onLayout()来重新计算自定义ViewGroup的内部布局
+3. 重写onMeasure()和onLayout()来重新计算自定义ViewGroup的内部布局
 
 ### onMeasure()
 
@@ -227,6 +229,8 @@ public static int resolveSizeAndState(int size, int measureSpec, int childMeasur
         }
     }
 ```
+
+***
 
 
 
