--- a/_posts/2019-09-01-自定义View.md
+++ b/_posts/2019-09-01-自定义View.md
@@ -61,7 +61,7 @@ tags:
 
 ### 三种情况
 
-## 1.重写onMeasure来修改已有View的尺寸
+#### 1.重写onMeasure来修改已有View的尺寸
 
 ``` java
 @Override
@@ -83,7 +83,7 @@ tags:
     } 
 ```
 
-## 2.重写onMeasure来重新计算自定义View的尺寸
+#### 2.重写onMeasure来重新计算自定义View的尺寸
 
 ``` java
     /**
@@ -145,9 +145,9 @@ public static int resolveSizeAndState(int size, int measureSpec, int childMeasur
     }
 ```
 
-## 3.重写onMeasure()和onLayout()来重新计算自定义ViewGroup的内部布局
+#### 3.重写onMeasure()和onLayout()来重新计算自定义ViewGroup的内部布局
 
-### onMeasure()
+##### onMeasure()
 
 1. 调用每个子View的measure方法，让子View进行自我测量
 2. 根据子View计算出的尺寸，得出子View的位置，并保存他们的位置和尺寸
@@ -219,7 +219,7 @@ public static int resolveSizeAndState(int size, int measureSpec, int childMeasur
     }
 ```
 
-### onLayout()
+##### onLayout()
 
 ``` java 
     @Override
